--- a/group_project/index.html
+++ b/group_project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="styleP1.css"/>
+      <link rel="stylesheet" href="IndexStyle.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     </head>
@@ -14,6 +14,9 @@
             <a href="p2Student.html">I'm a Student</a>
             <a>&emsp;&emsp;&emsp;&emsp;</a>
             <a href="p2Teacher.html">I'm a Teacher</a>
+        </div>
+        <div class="adminarea">
+            <a href="p2Admin.html">Admin Area</a>
         </div>
     </body>
 </html>
