--- a/group_project/index.html
+++ b/group_project/index.html
@@ -16,7 +16,7 @@
             <a href="p2Teacher.html">I'm a Teacher</a>
         </div>
         <div class="adminarea">
-            <a href="p2Admin.html">Admin Area</a>
+            <a href="p2Admin.php">Admin Area</a>
         </div>
     </body>
 </html>
