--- a/group_project/index.html
+++ b/group_project/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="IndexStyle.css"/>
+      <link rel="stylesheet" href="indexStyle.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="logo">
-            <p>Time Tracker</p>
+            <img src="logo.png"/>
         </div>
+        <span class="shape_logo"></span>
 
         <div class="choose">
             <a href="p2Student.html">I'm a Student</a>
             <a>&emsp;&emsp;&emsp;&emsp;</a>
             <a href="p2Teacher.html">I'm a Teacher</a>
         </div>
-        <div class="adminarea">
+        <div class="choose_admin">
             <a href="p2Admin.php">Admin Area</a>
         </div>
     </body>
